--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.6",
     "@nuxtjs/supabase": "^1.4.0",
+    "@vueuse/nuxt": "^11.1.0",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
