--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.18.6",
-    "@nuxtjs/supabase": "^1.4.0",
-    "@vueuse/nuxt": "^11.1.0",
-    "nuxt": "^3.13.0",
+    "@nuxt/ui": "^2.19.2",
+    "@nuxtjs/supabase": "^1.4.2",
+    "nuxt": "^3.14.159",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.1",
     "zod": "^3.23.8"
   }
 }
