--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.19.2",
     "@nuxtjs/supabase": "^1.4.3",
     "nuxt": "^3.14.1592",
