--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.20.0",
+    "@nuxtjs/seo": "^2.0.2",
     "@nuxtjs/supabase": "^1.4.4",
     "nuxt": "^3.14.1592",
     "vue": "latest",
