fix errors and add techniques descriptions

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.7.3",
     "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.20.0",
     "@nuxtjs/seo": "^2.0.2",
